@@ -79,7 +79,7 @@
         <sonar.organization>iti-ict</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 
-        <jext.version>1.2.0</jext.version>
+        <jext.version>1.3.0-SNAPSHOT</jext.version>
     </properties>
 
 
@@ -141,7 +141,11 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.18.1</version>
                     <configuration>
-                        <argLine>@{surefireJacocoAgent} -XX:+EnableDynamicAgentLoading -Dfile.encoding=UTF-8</argLine>
+                        <argLine>
+                            @{surefireJacocoAgent} -XX:+EnableDynamicAgentLoading -Dfile.encoding=UTF-8
+                            --add-opens java.base/java.util=ALL-UNNAMED
+                            --add-opens java.base/java.lang=ALL-UNNAMED
+                        </argLine>
                     </configuration>
                 </plugin>
                 <!-- Surefire with JaCoCo agent -->
@@ -155,7 +159,11 @@
                                 <goal>verify</goal>
                             </goals>
                             <configuration>
-                                <argLine>@{failsafeJacocoAgent} -XX:+EnableDynamicAgentLoading -Dfile.encoding=UTF-8</argLine>
+                                <argLine>
+                                    @{failsafeJacocoAgent} -XX:+EnableDynamicAgentLoading -Dfile.encoding=UTF-8
+                                    --add-opens java.base/java.util=ALL-UNNAMED
+                                    --add-opens java.base/java.lang=ALL-UNNAMED
+                                </argLine>
                             </configuration>
                         </execution>
                     </executions>
@@ -455,6 +463,16 @@
                 <version>2.15.2</version>
             </dependency>
             <dependency>
+                <groupId>com.fasterxml.jackson.dataformat</groupId>
+                <artifactId>jackson-dataformat-yaml</artifactId>
+                <version>2.15.2</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.dataformat</groupId>
+                <artifactId>jackson-dataformat-toml</artifactId>
+                <version>2.15.2</version>
+            </dependency>
+            <dependency>
                 <groupId>com.fasterxml.jackson.datatype</groupId>
                 <artifactId>jackson-datatype-jsr310</artifactId>
                 <version>2.15.2</version>
@@ -478,11 +496,6 @@
                 <groupId>commons-codec</groupId>
                 <artifactId>commons-codec</artifactId>
                 <version>1.17.0</version>
-            </dependency>
-            <dependency>
-                <groupId>io.github.luiinge</groupId>
-                <artifactId>immutable-config</artifactId>
-                <version>1.1.0</version>
             </dependency>
             <dependency>
                 <groupId>io.github.luiinge</groupId>
